i change width to 600px

--- a/index1.css
+++ b/index1.css
@@ -399,7 +399,7 @@
 }
 .contactusa1{
     height:fit-content;
-    width:fit-content;
+    width:600px;
     display:block;
     background-image: linear-gradient(to right top,rgb(165, 10, 95),rgb(64, 21, 182),rgb(25, 228, 150),rgb(143, 235, 23),rgb(123, 4, 4));
     font-family: algerian;
