some part of css commented

--- a/index1.css
+++ b/index1.css
@@ -396,7 +396,7 @@
     box-shadow:2px 2px 3px 4px violet;
     margin-top: 40px;
     margin-bottom: 40px;
-}
+}/*
 .contactusa1{
     height:fit-content;
     width:650px;
@@ -408,7 +408,7 @@
     margin-left:50px;
     margin-top: 40px;
     margin-bottom: 40px;
-}
+}*/
 footer{
     background-color:grey;
     height:50px;
