index1.css i changed margin of body

--- a/index1.css
+++ b/index1.css
@@ -1,9 +1,9 @@
 @media (orientation:portrait)
 {
-    body{
-        font-size:10px;
+        body{
+        font-size:17px;
         margin-right:0px;
-        padding:0px;
+        margin-left:100px;
         background-color:white;
 
 
