--- a/index1.css
+++ b/index1.css
@@ -2,10 +2,13 @@
 {
         body{
         font-size:20px;
-        position:relative;
-        right:20px;
-        left:20px;
+        margin-right:100px;
+        margin-left:100px;
         background-color:white;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         
 
 
@@ -95,15 +98,15 @@
             border-radius: 50%;
             margin-top:70px ;
             margin-bottom:10px;
-            margin-right: 20px;
-            margin-left:10px;
+           /* margin-right: 20px;
+            margin-left:10px;*/
         
             box-shadow:4px 2px 10px 10px black;
             transform:skew(11deg)
         }
 
         .homea2 {
-           margin:20px;
+          /* margin:20px;*/
             background-color: lightgrey;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             text-align: center;
@@ -120,7 +123,7 @@
             
         }
         .homeb .homeb1{
-            margin:20px;
+           /* margin:20px;*/
             background-color: lightgrey;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             text-align:center;
@@ -140,7 +143,7 @@
         .homeb{
             display:flex;
             flex-flow: column;
-            margin:20px;
+           /* margin:20px;*/
             gap:0px;
         
         }
@@ -198,7 +201,7 @@
 /* skills page css */
 .sec3 h2{
     height:30px;
-    margin-left:0px;
+   /* margin-left:0px;*/
     display:flex;
     justify-content: center;
     align-items: center;
@@ -230,7 +233,7 @@
         }
 .sec3 .container3{
     .sec3 .container3{
-    margin-left:50px;
+   /* margin-left:50px;*/
     display:block;
    /* color:yellow;*/
     font-weight:bolder;
@@ -252,7 +255,7 @@
     height:20px;
     width:200px;
     background-image: url("portfolio3.jpg");
-    margin-left:50px;
+    /*margin-left:50px;*/
 }
 /* h3b css*/
 .sec3 .container3 .h3b{
@@ -271,7 +274,7 @@
     height:20px;
     width:200px;
     background-image: url("portfolio3.jpg");
-    margin-left:50px;
+   /* margin-left:50px;*/
 }
 /* h3d css*/
 .sec3 .container3 .h3d{
@@ -291,7 +294,7 @@
     color:yellow;
     font-weight:bolder;
     text-align: center;
-    margin-left:50px;
+   /* margin-left:50px;*/
     font-size:12px;
 
 
@@ -343,7 +346,7 @@
 .projects .projectsa0
 {
     height:30px;
-    margin-left:10px;
+    /*margin-left:10px;*/
     display:flex;
     justify-content: center;
     align-items: center;
@@ -361,7 +364,7 @@
     width:450px;
     background-color: whitesmoke;
     box-shadow:2px 2px 3px 4px black;
-    margin-left:10px;
+   /* margin-left:10px;*/
 
 }
 .experiencesa{
@@ -369,12 +372,12 @@
     font-family: 'Times New Roman', Times, serif;
     font-weight:bolder;
     box-shadow:2px 2px 3px 4px rgb(92, 1, 1);
-    margin-left:20px;
+   /* margin-left:20px;*/
 
 }
 .experiencesa1{
         height:30px;
-    margin-left:10px;
+    /*margin-left:10px;*/
     display:flex;
     justify-content: center;
     align-items: center;
@@ -390,7 +393,7 @@
 }
 .contactusa{
      height:30px;
-    margin-left:10px;
+    /*margin-left:10px;*/
     display:flex;
     justify-content: center;
     align-items: center;
@@ -411,14 +414,14 @@
     font-family: algerian;
     font-weight: bolder;
     box-shadow:-3.5px -3.5px 1px 4px rgb(57, 54, 57);
-    margin-left:10px;
+  /*  margin-left:10px;*/
     margin-top: 40px;
     margin-bottom: 40px;
-    margin-right:0px;
+   /* margin-right:0px;*/
 }
 footer{
     background-color:grey;
-    height:50px;
+    height:100px;
     width:2000px;
 }
 footer .diva{
