--- a/index1.css
+++ b/index1.css
@@ -2,13 +2,10 @@
 {
         body{
         font-size:20px;
-        margin-right:150px;
-        margin-left:150px;
-        background-color:white;
-        
-        
-
-
+        margin-right:100px;
+        margin-left:100px;
+        background-color:yellow;
+        font-weight:bolder;
     }
             
        /* header css */
@@ -97,7 +94,6 @@
             margin-bottom:10px;
             margin-right: 20px;
             margin-left:10px;
-        
             box-shadow:4px 2px 10px 10px black;
             transform:skew(11deg)
         }
@@ -210,7 +206,8 @@
     box-shadow:2px 2px 3px 4px violet;
     
         }
-        .sec3 h2:hover{
+        /*
+        .sec3 h2:active{
     animation-name:skills;
     animation-duration:1s;
     animation-iteration-count:linear;
@@ -227,7 +224,7 @@
                 background-color:yellow;
                 box-shadow: 2px 2px 3px 3px orange;
             }
-        }
+        }*/
 .sec3 .container3{
     .sec3 .container3{
     margin-left:50px;
@@ -292,7 +289,7 @@
     font-weight:bolder;
     text-align: center;
     margin-left:50px;
-    font-size:12px;
+    font-size:15px;
 
 
 }
@@ -359,7 +356,7 @@
 }
 .projectsa{
     width:450px;
-    background-color: whitesmoke;
+    background-color: rgb(234, 119, 119);
     box-shadow:2px 2px 3px 4px black;
     margin-left:10px;
 
@@ -368,12 +365,12 @@
     width:450px;
     font-family: 'Times New Roman', Times, serif;
     font-weight:bolder;
-    box-shadow:2px 2px 3px 4px rgb(92, 1, 1);
+    box-shadow:2px 2px 3px 4px rgb(21, 145, 202);
     margin-left:20px;
 
 }
 .experiencesa1{
-        height:30px;
+    height:30px;
     margin-left:10px;
     display:flex;
     justify-content: center;
