--- a/index.css
+++ b/index.css
@@ -8,14 +8,17 @@
             top:0px;
             margin-top:0px;
         }
+        .profile{
+          display:none;
+        }
         /* navigation bar css
         list style manage in nav bar 
         nav bar flexing, hovering,anchor decoration
         smooth animation */
         .navbar {
             height: 100px;
-            background-image: linear-gradient(to left, pink, yellow, skyblue);
-            box-shadow: 2px 2px 3px 3px rgb(19, 19, 19);
+            background-image: linear-gradient(to left, rgb(163, 71, 137), rgb(187, 187, 85), rgb(114, 180, 206));
+            box-shadow: 2px 2px 3px 3px rgb(62, 59, 59);
             font-weight: bolder;
             font-family:Verdana, Geneva, Tahoma, sans-serif;
 
@@ -41,10 +44,10 @@
 
         .navbar ul li:hover {
             border-radius: 3px;
-            border: solid 3px orange;
+            border: solid 3px rgb(145, 117, 65);
             box-sizing: border-box;
-            box-shadow: 3px -3px 2px 1px rgb(63, 91, 30);
-            background-color: greenyellow;
+            box-shadow: 3px -3px 2px 1px rgb(53, 75, 27);
+            background-color: rgb(91, 119, 48);
             font-family: algerian;
             animation-name: animates;
             animation-duration: 1s;
@@ -76,11 +79,11 @@
             margin: 100px;
             padding-top: 50px;
             padding-bottom: 50px;
-            background-color:rgb(134, 24, 24);
+            background-color:rgb(78, 19, 19);
             font-family:'Times New Roman';
             text-align: center;
             border-radius: 20px;
-            color:whitesmoke
+            color:rgb(92, 37, 37)
         }
         
         .home .homea{
@@ -94,9 +97,9 @@
             margin: 100px;
             padding-top: 50px;
             padding-bottom: 50px;
-            background-color:rgb(134, 24, 24);
+            background-color:rgb(90, 21, 21);
             font-family:'Times New Roman';
-            color:whitesmoke;
+            color:rgb(182, 148, 148);
             text-align: center;
             border-radius: 20px;
         
@@ -105,7 +108,7 @@
             height:300px;
             width:300px;
             border-radius:0px 40px;
-            border:solid 5px darkorange;
+            border:solid 5px rgb(136, 105, 66);
             
         }
         .homeb{
@@ -119,12 +122,12 @@
             height:50px;
             width:150px;
             border-radius:25px;
-            background-color: black;
+            background-color: rgb(47, 43, 43);
             color:whitesmoke;
             font-family: algerian;
         }
         button:hover{
-            background-color: darkorange;
+            background-color: rgb(121, 88, 48);
             font-size:40px;
             font-family: algerian;
             animation-name: button;
@@ -145,7 +148,7 @@
         /* about page designing with colors and effects */
         /*heading*/
         .aboutheading{
-            color:red;
+            color:rgb(122, 45, 45);
             height:30px;
             display:flex;
             align-items: center;
@@ -154,7 +157,7 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-weight:bolder;
             text-align: center;
-            box-shadow: 2px 2px 3px 3px violet;
+            box-shadow: 2px 2px 3px 3px rgb(125, 67, 125);
         }
         .dataa1{
             margin-top:20px;
@@ -176,7 +179,7 @@
         }
         /* content hover of pages */
         .home .homea2:hover{
-            border:solid 3px rgb(11, 242, 107);
+            border:solid 3px rgb(68, 142, 99);
             animation-name:border-color;
             animation-duration:10s;
             animation-iteration-count:ease-in-out;
@@ -184,129 +187,129 @@
         @keyframes border-color{
             0%{
                 
-                border:solid 5px rgb(66, 1, 1);
+                border:solid 5px rgb(125, 60, 60);
                 box-shadow:2px 0px 3px 3px rgb(66,1,1);
             }
              15%{
                 
-                border:solid 7px rgb(239, 24, 239);
-                box-shadow:2px 0px 3px 3px rgb(239,24,239);
+                border:solid 7px rgb(145, 62, 145);
+                box-shadow:2px 0px 3px 3px rgb(169, 77, 169);
             }
              30%{
                 
-                border:solid 7px rgb(247, 13, 13);
-                box-shadow:2px 0px 3px 3px rgb(247,13,13);
+                border:solid 7px rgb(67, 22, 22);
+                box-shadow:2px 0px 3px 3px rgb(122, 4, 4);
             }
              45%{
                 
-                border:solid 7p rgb(244, 24, 244);
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7p rgb(91, 8, 91);
+                box-shadow:2px 0px 3px 3px rgb(121, 12, 121);
             }
             60%{
-                border:solid 7px rgb(213, 26, 126);
-                box-shadow:2px 0px 3px 3px rgb(213, 26, 126);
+                border:solid 7px rgb(107, 14, 63);
+                box-shadow:2px 0px 3px 3px rgb(116, 12, 68);
             }
             75%{
-                border:solid 7px rgb(106, 17, 17);
-                box-shadow:2px 0px 3px 3px rgb(106, 17, 17);
+                border:solid 7px rgb(80, 12, 12);
+                box-shadow:2px 0px 3px 3px rgb(78, 12, 12);
             }
             90%{
-                border:solid 7px yellow;
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7px rgb(101, 101, 18);
+                box-shadow:2px 0px 3px 3px rgb(101, 9, 101);
             }
             100%{
-                border:solid 7px darkgreen;
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7px rgb(10, 67, 10);
+                box-shadow:2px 0px 3px 3px rgb(107, 10, 107);
             }
         }
         /* content hover of pages */
            .homeb .homeb1:hover{
-            border:solid 3px rgb(11, 242, 107);
+            border:solid 3px rgb(8, 65, 32);
             animation-name:border-color;
             animation-duration:10s;
             animation-iteration-count:ease-in-out;
         }
         @keyframes border-color{
-            0%{
+           0%{
                 
-                border:solid 5px rgb(66, 1, 1);
+                border:solid 5px rgb(125, 60, 60);
                 box-shadow:2px 0px 3px 3px rgb(66,1,1);
             }
              15%{
                 
-                border:solid 7px rgb(239, 24, 239);
-                box-shadow:2px 0px 3px 3px rgb(239,24,239);
+                border:solid 7px rgb(145, 62, 145);
+                box-shadow:2px 0px 3px 3px rgb(169, 77, 169);
             }
              30%{
                 
-                border:solid 7px rgb(247, 13, 13);
-                box-shadow:2px 0px 3px 3px rgb(247,13,13);
+                border:solid 7px rgb(67, 22, 22);
+                box-shadow:2px 0px 3px 3px rgb(122, 4, 4);
             }
              45%{
                 
-                border:solid 7p rgb(244, 24, 244);
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7p rgb(91, 8, 91);
+                box-shadow:2px 0px 3px 3px rgb(121, 12, 121);
             }
             60%{
-                border:solid 7px rgb(213, 26, 126);
-                box-shadow:2px 0px 3px 3px rgb(213, 26, 126);
+                border:solid 7px rgb(107, 14, 63);
+                box-shadow:2px 0px 3px 3px rgb(116, 12, 68);
             }
             75%{
-                border:solid 7px rgb(106, 17, 17);
-                box-shadow:2px 0px 3px 3px rgb(106, 17, 17);
+                border:solid 7px rgb(80, 12, 12);
+                box-shadow:2px 0px 3px 3px rgb(78, 12, 12);
             }
             90%{
-                border:solid 7px yellow;
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7px rgb(101, 101, 18);
+                box-shadow:2px 0px 3px 3px rgb(101, 9, 101);
             }
             100%{
-                border:solid 7px darkgreen;
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7px rgb(10, 67, 10);
+                box-shadow:2px 0px 3px 3px rgb(107, 10, 107);
             }
         }
         /* content hover of pages */
         .about .dataa2:hover{
-            border:solid 3px rgb(11, 242, 107);
+            border:solid 3px rgb(11, 155, 107);
             animation-name:border-color;
             animation-duration:10s;
             animation-iteration-count:ease-in-out;
         }
         @keyframes border-color{
-            0%{
+           0%{
                 
-                border:solid 5px rgb(66, 1, 1);
+                border:solid 5px rgb(125, 60, 60);
                 box-shadow:2px 0px 3px 3px rgb(66,1,1);
             }
              15%{
                 
-                border:solid 7px rgb(239, 24, 239);
-                box-shadow:2px 0px 3px 3px rgb(239,24,239);
+                border:solid 7px rgb(145, 62, 145);
+                box-shadow:2px 0px 3px 3px rgb(169, 77, 169);
             }
              30%{
                 
-                border:solid 7px rgb(247, 13, 13);
-                box-shadow:2px 0px 3px 3px rgb(247,13,13);
+                border:solid 7px rgb(67, 22, 22);
+                box-shadow:2px 0px 3px 3px rgb(122, 4, 4);
             }
              45%{
                 
-                border:solid 7p rgb(244, 24, 244);
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7p rgb(91, 8, 91);
+                box-shadow:2px 0px 3px 3px rgb(121, 12, 121);
             }
             60%{
-                border:solid 7px rgb(213, 26, 126);
-                box-shadow:2px 0px 3px 3px rgb(213, 26, 126);
+                border:solid 7px rgb(107, 14, 63);
+                box-shadow:2px 0px 3px 3px rgb(116, 12, 68);
             }
             75%{
-                border:solid 7px rgb(106, 17, 17);
-                box-shadow:2px 0px 3px 3px rgb(106, 17, 17);
+                border:solid 7px rgb(80, 12, 12);
+                box-shadow:2px 0px 3px 3px rgb(78, 12, 12);
             }
             90%{
-                border:solid 7px yellow;
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7px rgb(101, 101, 18);
+                box-shadow:2px 0px 3px 3px rgb(101, 9, 101);
             }
             100%{
-                border:solid 7px darkgreen;
-                box-shadow:2px 0px 3px 3px rgb(244, 24, 244);
+                border:solid 7px rgb(10, 67, 10);
+                box-shadow:2px 0px 3px 3px rgb(107, 10, 107);
             }
         }
             .about .aboutb{
@@ -316,7 +319,7 @@
             .span{
                 padding-left:20px;
                 padding-right:20px;
-                color:purple;
+                color:rgb(75, 120, 75);
                 background-color: yellow;
             }
            /* 
@@ -359,12 +362,12 @@
                     display:flex;
                     justify-content: center;
                     align-items: center;
-                    color:red;
-                    background-color:lightgray;
+                    color:rgb(95, 12, 12);
+                    background-color:rgb(130, 113, 113);
                     font-family: algerian;
                     font-weight: bolder;
                     font-size: larger;
-                    box-shadow:2px 2px 3px 4px violet;
+                    box-shadow:2px 2px 3px 4px rgb(203, 110, 203);
                 }
                 .container2  p{
 
@@ -373,7 +376,7 @@
             margin-right:100px;
             margin-top:100px;
             word-spacing:10px;
-            border:solid 5px darkorange;
+            border:solid 5px rgb(180, 137, 84);
 
 
         }
@@ -407,12 +410,12 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
-    background-color:lightgray;
+    color:rgb(164, 64, 64);
+    background-color:rgb(149, 129, 129);
     font-family: algerian;
     font-weight: bolder;
     font-size: larger;
-    box-shadow:2px 2px 3px 4px violet;
+    box-shadow:2px 2px 3px 4px rgb(196, 107, 196);
     
         }
         .sec3 h2:hover{
@@ -424,20 +427,20 @@
         @keyframes skills{
             from{
                 transform: scale(1);
-                background-color:yellow;
-                box-shadow: 2px 2px 3px 3px orange;
+                background-color:rgb(112, 112, 47);
+                box-shadow: 2px 2px 3px 3px rgb(167, 136, 77);
             }
             to{
                 transform: scale(1);
-                background-color:yellow;
-                box-shadow: 2px 2px 3px 3px orange;
+                background-color:rgb(160, 160, 66);
+                box-shadow: 2px 2px 3px 3px rgb(206, 168, 98);
             }
         }
 .sec3 .container3,.image{
     display:inline;
     height:300px;
     width:200px;
-    color:red;
+    color:rgb(86, 27, 27);
 }
 
 /* h3a css*/
@@ -484,9 +487,9 @@
     
 }
         .aboutb .h4{
-            color:purple;
+            color:rgb(147, 61, 147);
             font-size:12px;
-            background-image:linear-gradient(to right bottom,yellow,green,skyblue,orange,darksalmon,darkgreen,darkorange);
+            background-image:linear-gradient(to right bottom,rgb(134, 134, 61),rgb(40, 102, 40),rgb(42, 84, 102),rgb(86, 63, 21),darksalmon,darkgreen,darkorange);
             height:25px;
             width:200px;
             font-family: algerian;
@@ -501,7 +504,7 @@
   soft skills css code
   */
   .technicalskills{
-    color:whitesmoke;
+    color:rgb(152, 139, 139);
     background-color:black;
     font-weight: bolder;
     font-size: 15px;
@@ -513,8 +516,8 @@
     justify-content: center;
   }
   .softskills{
-    color:whitesmoke;
-    background-color:black;
+    color:rgb(151, 123, 123);
+    background-color:rgb(55, 48, 48);
     font-weight: bolder;
     font-size: 15px;
     font-family: algerian;
@@ -536,7 +539,7 @@
     width:300px;
     text-align: center;
     padding-top:50px;
-    box-shadow:2px 2px 3px 3px rgb(216, 124, 4);
+    box-shadow:2px 2px 3px 3px rgb(99, 76, 46);
   }
   
 /*
@@ -544,7 +547,7 @@
   */
 .sec3 .soft{
     display:block;
-    color:yellow;
+    color:rgb(98, 98, 37);
     font-weight:bolder;
     text-align: center;
     margin-left:50px;
@@ -593,7 +596,7 @@
   
 .sec3 .soft{
     display:block;
-    color:yellow;
+    color:rgb(150, 150, 93);
     font-weight:bolder;
     /*background-image: url("portfolio1.jpg");*/
    /* background-repeat: np-repeat;*/
@@ -601,7 +604,7 @@
     width:300px;
     text-align: center;
     padding-top:50px;
-    box-shadow:2px 2px 3px 3px rgb(216, 124, 4);
+    box-shadow:2px 2px 3px 3px rgb(101, 75, 41);
 
 }
 footer{
@@ -656,18 +659,18 @@ footer .diva .instagram:hover{
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
+    color:rgb(98, 26, 26);
     background-color:lightgray;
     font-family: algerian;
     font-weight: bolder;
     font-size: larger;
-    box-shadow:2px 2px 3px 4px violet;
+    box-shadow:2px 2px 3px 4px rgb(207, 107, 207);
 
 }
 .projectsa{
     width:500px;
     background-color: whitesmoke;
-    box-shadow:2px 2px 3px 4px black;
+    box-shadow:2px 2px 3px 4px rgb(59, 57, 57);
     margin-left:50px;
 
 }
@@ -675,7 +678,7 @@ footer .diva .instagram:hover{
     width:500px;
     font-family: 'Times New Roman', Times, serif;
     font-weight:bolder;
-    box-shadow:2px 2px 3px 4px rgb(92, 1, 1);
+    box-shadow:2px 2px 3px 4px rgb(76, 5, 5);
     margin-left:50px;
 
 }
@@ -685,12 +688,12 @@ footer .diva .instagram:hover{
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
+    color:rgb(115, 25, 25);
     background-color:lightgray;
     font-family: algerian;
     font-weight: bolder;
     font-size: larger;
-    box-shadow:2px 2px 3px 4px rgb(233, 45, 233);
+    box-shadow:2px 2px 3px 4px rgb(84, 19, 84);
 
 }
 .contactusa{
@@ -699,18 +702,18 @@ footer .diva .instagram:hover{
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
+    color:rgb(142, 43, 43);
     background-color:lightgray;
     font-family: algerian;
     font-weight: bolder;
     font-size: larger;
-    box-shadow:2px 2px 3px 4px violet;
+    box-shadow:2px 2px 3px 4px rgb(184, 100, 184);
 }
 .contactusa1{
     height:fit-content;
     width:fit-content;
     display:block;
-    background-image: linear-gradient(to right top,rgb(165, 10, 95),rgb(64, 21, 182),rgb(25, 228, 150),rgb(143, 235, 23),rgb(123, 4, 4));
+    background-image: linear-gradient(to right top,rgb(128, 23, 81),rgb(55, 26, 132),rgb(60, 131, 104),rgb(74, 100, 41),rgb(92, 27, 27));
     font-family: algerian;
     font-weight: bolder;
     box-shadow:-3.5px -3.5px 1px 4px rgb(57, 54, 57);
