--- a/index1.css
+++ b/index1.css
@@ -4,7 +4,7 @@
         font-size:20px;
         margin-right:100px;
         margin-left:100px;
-        background-color:yellow;
+        background-color:rgb(194, 194, 66);
         font-weight:bolder;
     }
             
@@ -86,6 +86,11 @@
        header .navbar ul{
         display:none;
        }
+       .portfolio{
+        height:fit-content;
+        width:fit-content;
+        background-image: linear-gradient(to left bottom,rgb(128, 66, 66),rgb(136, 136, 53),rgb(63, 143, 63),rgb(155, 63, 155),rgb(125, 94, 35));
+       }
         .homea1 {
             height: 200px;
             width: 200px;
@@ -100,7 +105,7 @@
 
         .homea2 {
            margin:20px;
-            background-color: lightgrey;
+            background-color: rgb(137, 119, 119);
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             text-align: center;
             border-radius: 20px;
@@ -119,11 +124,11 @@
         }
         .homeb .homeb1{
             margin:20px;
-            background-color: lightgrey;
+            background-color: rgb(119, 93, 93);
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             text-align:center;
             border-radius: 20px;
-            color:darkgreen;
+            color:rgb(72, 116, 72);
             
             
 
@@ -132,7 +137,7 @@
             height:200px;
             width:200px;
             border-radius:0px 40px;
-            border:solid 5px darkorange;
+            border:solid 5px rgb(204, 151, 87);
             box-shadow:4px 2px 10px 10px black;
             
         }
@@ -148,9 +153,9 @@
             width:150px;
             border-radius:25px;
             background-color: black;
-            color:whitesmoke;
+            color:rgb(182, 172, 172);
             font-family: algerian;
-            box-shadow:1px 1px 3px 3px rgb(246, 80, 4);
+            box-shadow:1px 1px 3px 3px rgb(250, 153, 108);
         }
         
         
@@ -158,21 +163,19 @@
             height:200px;
             width:200px;
             margin-bottom:0px;
-            border:solid 5px purple;
+            border:solid 5px rgb(243, 120, 243);
             box-shadow:4px 2px 10px 10px black;
         }
         .dataa2{
     
-            background-color: lightgrey;
+            background-color: rgb(215, 175, 175);
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             text-align: center;
             border-radius: 20px;
             text-indent: 100px;
-            height:350px;
-            width:350;
-            overflow-x:auto;
+            height:fit-content;
+            width:fitcontent;
             margin-top:0px;
-            padding-top:20px;
             margin-bottom:50px;
         }
     .data{
@@ -182,9 +185,9 @@
     }
         
         .aboutb .h4{
-            color:purple;
+            color:rgb(211, 144, 211);
             font-size:12px;
-            background-image:linear-gradient(to right bottom,yellow,green,skyblue,orange,darksalmon,darkgreen,darkorange);
+            background-image:linear-gradient(to right bottom,rgb(235, 235, 112),rgb(151, 232, 151),rgb(148, 208, 232),rgb(231, 192, 120),rgb(249, 179, 156),rgb(145, 236, 145),darkorange);
             height:25px;
             width:200px;
             font-family: algerian;
@@ -202,7 +205,7 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
+    color:rgb(237, 106, 106);
     background-color:lightgray;
     font-family: algerian;
     font-weight: bolder;
@@ -241,7 +244,7 @@
     width:300px;
     text-align: center;
     padding-top:50px;
-    box-shadow:2px 2px 3px 3px rgb(216, 124, 4);
+    box-shadow:2px 2px 3px 3px rgb(233, 191, 137);
   }
 }
 
@@ -289,7 +292,7 @@
   */
 .sec3 .soft{
     display:block;
-    color:yellow;
+    color:rgb(154, 154, 52);
     font-weight:bolder;
     text-align: center;
     margin-left:50px;
@@ -348,20 +351,20 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
-    background-color:lightgray;
+    color:rgb(246, 93, 93);
+    background-color:rgb(201, 195, 195);
     font-family: algerian;
     font-weight: bolder;
     font-size: larger;
-    box-shadow:2px 2px 3px 4px violet;
+    box-shadow:2px 2px 3px 4px rgb(239, 144, 239);
     margin-top: 40px;
     margin-bottom: 40px;
 
 }
 .projectsa{
     width:450px;
-    background-color: rgb(234, 119, 119);
-    box-shadow:2px 2px 3px 4px black;
+    background-color: rgb(216, 106, 106);
+    box-shadow:2px 2px 3px 4px rgb(57, 54, 54);
     margin-left:10px;
 
 }
@@ -369,7 +372,7 @@
     width:450px;
     font-family: 'Times New Roman', Times, serif;
     font-weight:bolder;
-    box-shadow:2px 2px 3px 4px rgb(21, 145, 202);
+    box-shadow:2px 2px 3px 4px rgb(78, 182, 231);
     margin-left:20px;
 
 }
@@ -379,12 +382,12 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
-    background-color:lightgray;
+    color:rgb(244, 110, 110);
+    background-color:rgb(170, 165, 165);
     font-family: algerian;
     font-weight: bolder;
     font-size: larger;
-    box-shadow:2px 2px 3px 4px rgb(233, 45, 233);
+    box-shadow:2px 2px 3px 4px rgb(245, 114, 245);
     margin-top: 40px;
     margin-bottom: 40px;
 
@@ -395,12 +398,12 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    color:red;
-    background-color:lightgray;
+    color:rgb(226, 88, 88);
+    background-color:rgb(183, 181, 181);
     font-family: algerian;
     font-weight: bolder;
     font-size: larger;
-    box-shadow:2px 2px 3px 4px violet;
+    box-shadow:2px 2px 3px 4px rgb(219, 127, 219);
     margin-top: 40px;
     margin-bottom: 40px;
 }
