changes arre done

--- a/index.css
+++ b/index.css
@@ -1,49 +1,5 @@
 
 
-   @media (orientation:portrait) {
-    aside{
-            display:none;
-            width:300px;
-            height:2000px;
-            background-color: lightgrey;
-            position:fixed;
-            top:0px;
-            
-
-        
-        }
-        .division{
-            height:100px;
-            width:100px;
-        }
-
-        #italic{
-
-            position:fixed;
-            margin:10px;
-            top:0px;
-            height:80px;
-            width:80px;
-            border-radius: 50%;
-            background-color: rgb(138, 145, 155);
-            display:flex;
-            justify-content: center;
-            align-items: center;
-            font-size:50px; 
-            color:rgba(235, 247, 10, 0.7);
-        }
-       .division:active + aside{
-            display:list-item;
-
-        }
-        .profile1{
-            margin-top:100px;
-            padding-top:0px;
-
-
-        }
-    
-   
    /* header css */
 header{
  position:fixed;
@@ -56,10 +12,7 @@ header{
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  padding-top:0px;
  margin-top:0px;
- height:150px;
- margin-right:0px;
- padding-right:0px;
- 
+ height:120px;
 }
 .navbar h1{
     margin-left:40%;
@@ -114,36 +67,39 @@ a {
 /* home css code
 image radius height width designing,flexing,button,hovering,smoooth,animation */
 .homea1 {
- height: 250px;
- width: 250px;
+ height: 300px;
+ width: 300px;
  border-radius: 0%;
- margin-top: 200px;
- margin-left: 500px;
+ margin-top: 50px;
+ margin-left: 50px;
  border:solid 5px #0f172a;
  
 }
 
 .homea2 {
- width: 500px;
- margin-left:300px;
- border:solid 3px rgb(11, 242, 107,0.3);
+ margin: 100px;
+ padding-top: 50px;
+ padding-bottom: 50px;
  background-color:#dbeafe;
+ font-family:'Times New Roman';
+ text-align: center;
+ border-radius: 20px;
+ font-weight:bolder;
+ border:solid 3px rgb(11, 242, 107,0.3);
  
 }
 
 .home .homea{
- display:flex;
+ display: flex;
  justify-content: center;
  align-items: center;
  gap: 50px;
- flex-direction: column;
  margin-top:75px;
 }
 .homeb1{
-  width:450px;
- margin-left:400px;
+ margin: 100px;
  padding-top: 50px;
- padding-bottom: 25px;
+ padding-bottom: 50px;
  font-family:'Times New Roman';
  text-align: center;
  border-radius: 20px;
@@ -153,31 +109,28 @@ image radius height width designing,flexing,button,hovering,smoooth,animation */
 
 }
 .homeb2{
- height:250px;
- width:250px;
+ height:300px;
+ width:300px;
  border-radius:0px 40px;
  border:solid 5px #0f172a;
- padding-left:0px;
- margin-left:0px;
  
 }
 .homeb{
  display:flex;
  justify-content:center;
  align-items:center;
- flex-direction: column-reverse;
  gap:50px;
 
 }
 button{
  height:35px;
- width:100px;
+ width:80px;
  border-radius:25px;
  background-color:#1e3a8a;
  color:#ffffff;
  font-family: algerian;
 }
-button:active{
+button:hover{
  background-color: darkorange;
  font-size:20px;
  font-family: algerian;
@@ -215,36 +168,30 @@ button:active{
  box-shadow: 2px 2px 3px 3px rgb(34, 136, 196,0.3);
 }
 .dataa1{
- margin-top:50px;
+ margin-top:20px;
  border-radius:40px 100px;
  border:solid 5px #0f172a;
  
 }
 .dataa2{
- margin-top:10px;
+ margin-top:150px;
  font-family:'Times New Roman';
  text-align: center;
- word-spacing:5px;
  border-radius: 20px;
  text-indent: 100px;
  font-weight:bolder;
  background-color:#dbeafe;
  border:solid 3px rgb(11, 242, 10,0.3);
- width:550px;
- height:240px;
- margin-left: 250px;
- 
 
 }
 .about .data{
  display:flex;
  justify-content: center;
  align-items:center;
- flex-direction:column;
  gap:100px;
 }
 /* content hover of pages */
-.home .homea2:active{
+.home .homea2:hover{
  
  animation-name:border-color;
  animation-duration:1s;
@@ -255,7 +202,7 @@ button:active{
 
 
 /* content hover of pages */
-.homeb .homeb1:active{
+.homeb .homeb1:hover{
  animation-name:border-color;
  animation-duration:1s;
  animation-iteration-count:linear;
@@ -265,7 +212,7 @@ button:active{
 
 
 /* content hover of pages */
-.about .dataa2:active{
+.about .dataa2:hover{
 
  animation-name:border-color;
  animation-duration:1s;
@@ -543,22 +490,21 @@ box-shadow:2px 2px 3px 3px rgb(216, 124, 4,0.5);
  box-shadow: 2px 2px 3px 3px rgb(34, 136, 196,0.3);
 }
 .projectsa{
-width:480px;
-
+width:500px;
 background-color: whitesmoke;
 box-shadow:2px 2px 3px 4px black;
 margin-left:100px;
-padding:20px;
+padding:50px;
 border:solid 10px rgba(255, 225, 0, 0.3);
 border-radius:25px;
 
 }
 .experiencesa{
-width:480px;
+width:500px;
 background-color: whitesmoke;
 box-shadow:2px 2px 3px 4px black;
 margin-left:100px;
-padding:20px;
+padding:50px;
 border:solid 10px rgba(0, 255, 204, 0.3);
 border-radius:25px;
 
@@ -589,11 +535,11 @@ border-radius:25px;
  box-shadow: 2px 2px 3px 3px rgb(34, 136, 196,0.3);
 }
 .contactusa1{
-width:480px;
+width:500px;
 background-color: whitesmoke;
 box-shadow:2px 2px 3px 4px black;
 margin-left:100px;
-padding:20px;
+padding:50px;
 border:solid 10px rgba(11, 234, 111, 0.3);
 border-radius:25px;
 }
@@ -641,4 +587,3 @@ transform:scale(1.3);
 .copyrights{
 text-align: center;
 }
-   }
